--- a/Lesson 9/css/small.css
+++ b/Lesson 9/css/small.css
@@ -15,6 +15,7 @@ header {
 
 #encabezado {
     display: block ;
+    background-color: #008BF8;
 }
 
 header img {
@@ -24,15 +25,11 @@ header img {
     padding: 10px 10px 0px 15px;
 }
 
-#ciudad {
-    text-align: center;
-    color:#DC0073;
-}
-
 #herosum {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     margin-left: 0;
+    margin-top: 30px;
 }
 
 #hero {
@@ -47,26 +44,6 @@ header img {
         margin: auto;
 }
 
-#summary {
-        grid-column: 1/5;
-        grid-row: 5/6;
-        top: 435px;
-        background: radial-gradient(#eee, #4567aa);
-        border: 1px solid #000;
-        padding: 1px;
-        box-shadow: 0 0 30px #111;
-        opacity: .8;
-        text-align: center;
-        line-height: 1px;
-        color: green;
-        font-size: small;
-        margin-top: 10px;
-    
-}
-
-#clima {
-    text-decoration: underline;
-}
 
 h2 {
     text-align: center;
@@ -75,23 +52,6 @@ h2 {
 
 #five {
     display: none;
-}
-
-table, th, td {
-    border: 1px solid black;
-    border-collapse: collapse;
-    margin-left: 85px;
-}
-
-th {
-    background-color: #008BF8;
-    color: white;
-}
-
-#articulo {
-    width: 100%;
-    border: 1px solid #FFDB30;
-	box-shadow: 10px 10px 10px #004777;
 }
 
 #titulo {
@@ -145,6 +105,15 @@ nav ul.hide {
 
 }
 
+#feedback {
+    background-color: rgb(204, 191, 14);
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    padding: .5em;    
+}
+
 main, footer {
     margin: 1rem auto;
     max-width: 960px;
@@ -153,6 +122,10 @@ main, footer {
 main {
     background-color: #FFFFFF;
     margin-top: -20px
+}
+
+#web {
+    color: white;
 }
 
 footer {
@@ -171,120 +144,53 @@ footer {
 
 }
 
-#web {
-    color: white;
-}
-
 .active {
     background: #5fd35f;
     text-decoration: underline;
 }
 
-#feedback {
-    background-color: rgb(204, 191, 14);
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    padding: .5em;    
+
+/*home page*/
+h1, h2 {
+    text-align: center;
+    color: blue;
+    
 }
 
-.parrafo {
-    padding-left: 5px;
+h3 {
+    text-align: center;
 }
 
-#galeria {
+.home {
     display: grid;
-     grid-template-columns: repeat(auto-fill,minmax(250px, 1fr));
-     max-width: 960px;
-     gap: 10px;
-     margin-left: 0;
-     margin-right: 0;
-     grid-template-rows: repeat(auto-fill,minmax(210px,1fr));
-   
+     grid-template-columns: repeat(auto-fill,minmax(220px, 1fr));
+     max-width: 100%;
+     gap: 5px;
+     margin: 5px;
+     grid-template-rows: repeat(auto-fill,minmax(200px, 1fr));
+     
 }
 
-figure {
+section {
     display: block;
     margin: auto;
-    text-align: center;
+    background-color: rgb(170, 169, 199);
+    border: 1px solid black;
 }
 
-figure img {
-    width: 100%;
-}
-
-form {
-    display: block;
-    font-weight: bold;
-}
-
-form fieldset {
-    
-    border: 2px solid #0b7e3f;
-    border-radius: 10px;
-    
-    }
-
-legend {
-    text-align: center;
-    font-size: 20px;
-    font-style: italic;
-    font-weight: bold;
-    color:#004777;
-}
-
-.unico, option, select {
-    padding: 10px;
-    background-color: #d9e1eb;
-    color: red;
-    width: auto;
-}
-
-label {
-    margin-top: 10px;
-}
-
-#ratingvalue {
-    color: red;
-}
-
-#rating {
-    color: red;
-}
-
-.enviar {
-    display: block;
-    margin: auto;
-    padding: 10px;
-    background-color: yellow;
-    }
-
-textarea {
-    border: solid 2px #999;
-    border-radius: 4px;
-    width: 100%;
+section img {
+    width: 90%;
     height: 200px;
-    margin: 0;
+    margin: auto;
+    display: block;
+    margin-bottom: 10px;
+    box-shadow: 10px 0 20px black;
 }
 
-select option {
-    color: red;
-}
-
-input:invalid+span:after {
-    position: absolute; content: '✖';
-    padding-left: 5px;
-}
-
-input:valid+span:after {
-    position: absolute;
-    content: '✓';
-    padding-left: 5px;
-}
-
-.comment {
-    height: 250px;
+p {
+    font-size: medium;
+    text-align: center;
+    margin: 6px;
 }
 
 
