--- a/Lesson 9/css/large.css
+++ b/Lesson 9/css/large.css
@@ -111,5 +111,33 @@
         margin-left: auto;
         }
 
-}
+        .town{
+            display: block;
+        }
+    
+        .home {
+            display: grid;
+            grid-template-columns: repeat(auto-fill,minmax(250px, 1fr));
+            max-width: 100%;
+            gap: 5px;
+        }
+        .home section img{
+            width: 90%;
+            height: 200px;
+            display: block;
+            margin:auto;
+            margin-bottom: 10px;
+            box-shadow: 10px 0 20px black;
+        }
 
+        .town {
+            display: block;
+            margin: auto;
+        }
+
+        h4 {
+            font-style: italic;
+        }
+
+
+}
