--- a/Lesson 9/css/medium.css
+++ b/Lesson 9/css/medium.css
@@ -66,8 +66,38 @@
     }
 
     #information {
-        grid-column: 3/4;
-        grid-row: 1/2;
-        padding-bottom: 100px;
+    grid-column: 3/4;
+    grid-row: 1/2;
+    padding-bottom: 100px;
     }
 
+    .town{
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        justify-content: center;
+        justify-items: center;
+        width: 100%;
+    }
+    .data2 {
+        grid-column: 1;
+    }
+    
+    .derecha{
+        grid-column: 2;
+        
+    }
+    .left{
+        grid-column: 1;
+        grid-row: 1;
+    };
+    data{
+        grid-column: -1;
+    }
+
+    .home section img {
+        width: 100%;
+        display: block;
+        margin: auto;
+    }
+
+}
