--- a/Lesson 9/css/small.css
+++ b/Lesson 9/css/small.css
@@ -144,55 +144,50 @@ footer {
 
 }
 
+#pie {
+    background-color: #00589b;
+    grid-column: 1/4;
+    grid-row: 2/3;
+    margin-top: 20px;
+}
+
 .active {
     background: #5fd35f;
     text-decoration: underline;
 }
 
+.home {
+    text-align: center;
+    margin-left: 0px;
+    margin-right: 0px;
+    max-width: 960px;
+}
+.town {
+    text-align: center;
+    width: 100%;
+    margin: auto;
+    display: block;
+    margin: 5px;
+    border: black solid 1px;
+    background-color: #eee;
+}
 
-/*home page*/
+.home section img {
+    display: block;
+    margin: auto;
+    margin-bottom: 10px;
+    width: 90%;
+}
+
 h1, h2 {
     text-align: center;
-    color: blue;
-    
+	    color: blue;
+
 }
 
-h3 {
-    text-align: center;
+h4 {
+    font-style: italic;
 }
-
-.home {
-    display: grid;
-     grid-template-columns: repeat(auto-fill,minmax(250px, 1fr));
-     max-width: 100%;
-     gap: 5px;
-     margin: 5px;
-}
-
-.home section {
-    display: block;
-    margin: auto;
-    background-color: rgb(170, 169, 199);
-    border: 1px solid black;
-    height: 400px;
-}
-
-section img {
-    width: 90%;
-    height: 200px;
-    margin: auto;
-    display: block;
-    margin-bottom: 10px;
-    box-shadow: 10px 0 20px black;
-}
-
-p {
-    font-size: medium;
-    text-align: center;
-    margin: 6px;
-}
-
-
 
 
 
