--- a/Lesson 10/css/small.css
+++ b/Lesson 10/css/small.css
@@ -215,6 +215,19 @@ figure img {
 }
 
 
+/*prueba*/
+
+#five-days {
+    display: grid;
+     grid-template-columns: repeat(auto-fill,minmax(180px, 1fr));
+     max-width: 960px;
+     gap: 10px;
+     grid-template-rows: 3repeat(auto-fill,minmax(150px,1fr));
+     margin: auto;
+     display:block
+   
+}
+
 
 
 
