--- a/Lesson 10/css/large.css
+++ b/Lesson 10/css/large.css
@@ -92,6 +92,22 @@
 	    box-shadow: 10px 10px 10px #004777;
     }
 
+    .events section {
+        grid-column: 4/5;
+            grid-row: 3/4;
+            top: 435px;
+            background: radial-gradient(#eee, #4567aa);
+            border: 1px solid #000;
+            padding: 1px;
+            box-shadow: 0 0 30px #111;
+            opacity: .8;
+            text-align: center;
+            line-height: 1px;
+            color: green;
+            font-size: small;
+            margin-top: 10px;
+    }
+
    
 
 
