--- a/Lesson 10/css/large.css
+++ b/Lesson 10/css/large.css
@@ -92,9 +92,22 @@
 	    box-shadow: 10px 10px 10px #004777;
     }
 
-    
+    .events {
+        grid-column: 4/5;
+        grid-row: 3/4;
+        background: radial-gradient(#eee, #4567aa);
+            border: 1px solid #000;
+            padding: 0.5px;
+            box-shadow: 0 0 30px #111;
+            opacity: .8;
+            color: green;
+            text-align: center;
+            font-size: medium;
+    }
 
-   
+   h3 {
+       color:#DC0073; 
+   }
 
 
 }
