--- a/Lesson 9/css/medium.css
+++ b/Lesson 9/css/medium.css
@@ -32,10 +32,13 @@
 
     #hero {
         width: 100%;
+        margin-top: 30px;
     }
 
-    #pupose {
+    #purpose {
         margin: auto;
+        font-size: 1.3rem;
+        margin-left: 10px;
     }
 
     #primero {
