--- a/Lesson 11/Lesson 10/css/small.css
+++ b/Lesson 11/Lesson 10/css/small.css
@@ -189,7 +189,7 @@ footer {
 
 #feedback {
     background-color: rgb(204, 191, 14);
-    position: absolute;
+    position: relative;
     top: 0;
     left: 0;
     right: 0;
