--- a/Lesson 11/Lesson 10/css/medium.css
+++ b/Lesson 11/Lesson 10/css/medium.css
@@ -127,4 +127,21 @@
         font-size: 30px;
     }
 
+    .events {
+        grid-column: 3/4;
+        grid-row: 3/4;
+        background: radial-gradient(#eee, #4567aa);
+            border: 1px solid #000;
+            padding: 0.5px;
+            box-shadow: 0 0 30px #111;
+            opacity: .8;
+            color: green;
+            text-align: center;
+            font-size: small;
+    }
+
+   h3 {
+       color:#DC0073; 
+   }
+
 }
