--- a/Lesson 13/css/large.css
+++ b/Lesson 13/css/large.css
@@ -1,11 +1,11 @@
 body {
-    background-color: white;
+    background-color: #E5E5E5;
     font-size: 18px;
     margin: 0;
   }
   
   header {
-    background-color: #008BF8;
+    background-color: black;
     align-items: center;
     justify-content: center;
     padding: 5px 0;
@@ -14,24 +14,27 @@ body {
   
   #encabezado {
     display: block;
-    background-color: #008BF8;
+    background-color:black;
     margin: 0;
     text-align: center;
+    color: white;
   }
   
   #ciudad {
     display: block;
     margin: auto;
-    background-color: #008BF8;
+    background-color: black;
     text-align: center;
+    color: white;
   }
   
   #slogan {
     display: block;
-    background-color: #008BF8;
+    background-color: black;
     margin: auto;
     text-align: center;
     font-style: italic;
+    color: white;
   }
   
   header img {
@@ -88,7 +91,8 @@ body {
   
   table, th, td {
           margin-left: 150px;
-          width: 700px;
+          width: 300px;
+          
       }
   
   table, th, td {
@@ -109,7 +113,7 @@ body {
     width: 100%;
   }
   
-  h1 {
+  h1, h3{
     text-align: center;
   }
   
@@ -118,13 +122,12 @@ body {
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 250px 50px;
     grid-gap: 20px;
-    border: 1px solid #FFDB30;
-    box-shadow: 10px 10px 10px #004777;
     height: 350px;
+    margin-top: -20px;
   }
   
   footer {
-   
+    background-color: white;
       font-size: 20px;
       text-align: center;
      
@@ -136,7 +139,8 @@ body {
     grid-column: 1/2;
     grid-row: 1/2;
     margin: 10px;
-    border: 1px solid #FFDB30;
+    
+    
   }
   
   #information {
@@ -144,10 +148,11 @@ body {
     grid-row: 1/2;
     padding-bottom: 100px;
     text-align: center;
+    background-color: white;
   }
   
   #pie {
-    background-color: #00589b;
+    background-color: black;
     grid-column: 1/4;
     grid-row: 2/3;
     margin-top: 30px;
@@ -156,3 +161,53 @@ body {
     color: white;
   }
   
+  #five {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      gap: 20px;
+      margin-top: 30px;
+      height: 100px;
+  }
+
+  #summary {
+      grid-column: 1/2;
+      margin: auto;
+      background: radial-gradient(#eee, #4567aa);
+            border: 1px solid #000;
+            padding: 0.5px;
+            box-shadow: 0 0 30px #111;
+            opacity: .8;
+            text-align: center;
+            line-height: 0.5px;
+            color: green;
+            font-size: large;
+        
+  }
+
+  #tabla {
+      grid-column: 2/3;
+      margin: auto;
+  }
+
+  #empresa {
+      display: grid;
+      grid-template-columns: 1fr 1fr 1fr;
+      gap: 10px;
+      padding: 20px;
+  }
+
+  .emp {
+      display:block;
+      margin: auto;
+      border: 1px solid #000;
+      height: 100%;
+      align-items: center;
+  }
+
+  .emp h2 {
+      text-align: center;
+  }
+
+ #purpose {
+      padding: 20px;
+  }
